k8s-config/deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: lhwdev-website
  namespace: lhwdev-practice
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: lhwdev-website
  replicas: 1

  template:
    metadata:
      namespace: lhwdev-practice
      labels:
        app.kubernetes.io/name: lhwdev-website
    spec:
      nodeName: master # 아직 복잡한 persistent 설정하기는 귀찮아요

      containers:
        - name: server
          image: lhwdev/k8s-website-test:1.0.2
          command: ["npm"]
          args: ["run", "serve"]
          workingDir: "/usr/share/website-test"
          resources:
            limits:
              memory: 128Mi
              cpu: 500m
          ports:
            # HTTP server
            - containerPort: 80
