k8s-config/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: lhwdev-practice
  name: lhwdev-practice-ingress
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-issuer"
    nginx.ingress.kubernetes.io/limit-rpm: "1"

spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - lhwdev.scg.skku.ac.kr
      secretName: lhwdev-tls

  rules:
    - host: lhwdev.scg.skku.ac.kr
      http:
        paths:
          - backend:
              service:
                name: lhwdev-practice-service
                port:
                  number: 80
            path: /
            pathType: Prefix
